table border changed

--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
         
         th {
             width: 200px;
-            border: 2px solid #F5882E;
+            border: 1px solid #F5882E;
             text-align: center;
             color: #D95A27;
         }
 
         td {
             width: 150px;
-            border: 2px solid #F5882E;
+            border: 1px solid #F5882E;
             text-align: center;
             color: #F5882E;
         }
@@ -163,32 +163,32 @@
         
         <table class="point">
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 0</th>
-                <td style="border: 1px solid #F5882E;"><div id="one">N/A</div></td>
+                <th>Point 0</th>
+                <td><div id="one">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 1</th>
-                <td style="border: 1px solid #F5882E;"><div id="two">N/A</div></td>
+                <th>Point 1</th>
+                <td><div id="two">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 2</th>
-                <td style="border: 1px solid #F5882E;"><div id="three">N/A</div></td>
+                <th>Point 2</th>
+                <td><div id="three">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 3</th>
-                <td style="border: 1px solid #F5882E;"><div id="four">N/A</div></td>
+                <th>Point 3</th>
+                <td><div id="four">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 4</th>
-                <td style="border: 1px solid #F5882E;"><div id="five">N/A</div></td>
+                <th>Point 4</th>
+                <td><div id="five">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 5</th>
-                <td style="border: 1px solid #F5882E;"><div id="six">N/A</div></td>
+                <th>Point 5</th>
+                <td><div id="six">N/A</div></td>
             </tr>
             <tr>
-                <th style="border: 1px solid #F5882E;">Point 6</th>
-                <td style="border: 1px solid #F5882E;"><div id="seven">N/A</div></td>
+                <th>Point 6</th>
+                <td><div id="seven">N/A</div></td>
             </tr>
         </table>
       </div>
@@ -300,7 +300,7 @@
                 stopBlinkingGreen();
             }
             else if (text === "Point Reached: 0") {
-                autonomous.innerHTML = "Reached or something like this";
+                autonomous.innerHTML = "Reached";
                 Div1.innerHTML = "Reached"; 
                 Div1.style.color = "green"; // make the text bold
                 if(isBlinking == false){
