--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     
     
 
-    <div class="status" style="border: 1px solid red;">
+    <div class="status">
 
         <table class="autonomous">
             <tr>
