--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;700&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/galactic-vanguardian-ncv" rel="stylesheet">
                           
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/roslibjs/1.1.0/roslib.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/roslibjs/1.1.0/roslib.min.js"></script> -->
+
+    <!-- using offline roslib -->
+    <script type="text/javascript" src="http://localhost:8000/asset/roslib.min.js"></script>
+    
     <style>
 
         .container {
