--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                           
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/roslibjs/1.1.0/roslib.min.js"></script> -->
 
-    <!-- using offline roslib -->
+    <!-- using offline roslib from localhost:8000 [ port=8000  ] -->
     <script type="text/javascript" src="http://localhost:8000/asset/roslib.min.js"></script>
     
     <style>
