--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Autonomous Dashboard</title>
     
-    <!-- using offline roslib and fonts -->
+    <!-- using locally hosted roslib and fonts -->
     <link rel="stylesheet" type="text/css" href="http://localhost:8000/asset/styles.css">
     <link rel="stylesheet" type="text/css" href="asset/styles.css">
     <script type="text/javascript" src="http://localhost:8000/asset/roslib.min.js"></script>
