using locally hosted roslib and fonts

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <table class="autonomous">
             <tr>
-                <th>Status</th>
+                <th>ROVER STATUS</th>
                 <td><div id="autonomous">N/A</div></td>
             </tr>
 
