using locally hosted roslib and fonts

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
     <div class="first">
         <!-- <label><b>AUTONOMOUS DASHBOARD</b></label>  -->
-        <label><b>Autonomous Dashboard</b></label> 
+        <label><b>Autonomous Mission</b></label> 
 
         <img class="logo" src="asset/UMRT new logo.png" alt="">
 
