listener for /nav_sat topic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Autonomous Dashboard</title>
     
     <!-- using locally hosted roslib and fonts -->
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/asset/styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="http://localhost:8000/asset/styles.css"> -->
     <link rel="stylesheet" type="text/css" href="asset/styles.css">
     <script type="text/javascript" src="http://localhost:8000/asset/roslib.min.js"></script>
     
