--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
             else if (text === "Point Reached: 2") {
                 Div3.innerHTML = "Reached";
                 Div3.style.color = "green";
+                // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
                 if(isBlinking == false){
                     startBlinking();
                 }
@@ -376,6 +377,7 @@
             else if (text === "Point Reached: 3") {
                 Div4.innerHTML = "Reached";
                 Div4.style.color = "green";
+                // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
                 if(isBlinking == false){
                     startBlinking();
                 }
@@ -386,6 +388,7 @@
             else if (text === "Point Reached: 4") {
                 Div5.innerHTML = "Reached";
                 Div5.style.color = "green";
+                // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
                 if(isBlinking == false){
                     startBlinking();
                 }
@@ -396,6 +399,7 @@
             else if (text === "Point Reached: 5") {
                 Div6.innerHTML = "Reached";
                 Div6.style.color = "green";
+                // save post coordinate (required for autonomous course restart) by reading current /nav_sat datasave post coordinate by reading current /nav_sat data
                 if(isBlinking == false){
                     startBlinking();
                 }
@@ -406,6 +410,7 @@
             else if (text === "Point Reached: 6") {
                 Div7.innerHTML = "Reached";
                 Div7.style.color = "green";
+                // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
                 if(isBlinking == false){
                     startBlinking();
                 }
