Dynamic MAP loading (Dashboard loads map based on coordinate from 'gps_data.json' file) |tested

--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
                     var centerLat = coordinatesArray[0][0];
                     var centerLong = coordinatesArray[0][1];
             
+                    // Dynamic Map loading based on coordinates from 'gps_data.json'
                     var firstCoordinate = coordinatesArray[0];
                     var firstCoordinateLongitude = firstCoordinate[1].toFixed(8); 
 
