publishing jetson and RPi ping stats in /latency topic

--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
             }
 
             var customIcon = L.icon({
-                iconUrl: './asset/point_01.gif', // Only GPS
-                iconSize: [11, 15],
+                iconUrl: './asset/point_01_.gif', // Only GPS
+                iconSize: [20, 23],
                 iconAnchor: [5, 5]
             });
 
