--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             }
 
             var customIcon = L.icon({
-                iconUrl: './asset/point_01_.gif', // Only GPS
+                iconUrl: './asset/point_01_.gif', // Only GPS Point
                 iconSize: [20, 23],
                 iconAnchor: [5, 5]
             });
