--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
         var light = document.getElementById("light");
         var isBlinking = false;
         var locationVariable;
+        let blinkInterval;
 
 
         // Create a ROS connection
