--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
 
         </div> -->
 
+        <button id="hiddenButton" style="display: none;"></button>
+
     </div>
 
     </div>
@@ -411,14 +413,15 @@
             let sentence = text.toLowerCase();
             console.log(message.data);
 
-            if ('speechSynthesis' in window) {
-                var utterance = new SpeechSynthesisUtterance(`${sentence}`);
-                utterance.rate = 0.7; 
-                utterance.volume = 0.5;
-                speechSynthesis.speak(utterance);
-            } else {
-                alert('SpeechSynthesis is not supported in this browser');
-            }
+            document.getElementById('hiddenButton').click();
+
+            // Perform speech synthesis when the button is clicked
+            document.getElementById('hiddenButton').addEventListener('click', () => {
+                speechSynthesis.speak(new SpeechSynthesisUtterance('Hello, world!'));
+            });
+
+
+
 
             if (text === "RED -> Autonomous Mode") {
                 light.style.backgroundColor = "red";
