--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="http://localhost:8000/asset/roslib.min.js"></script>
     <link rel="stylesheet" href="./leaflet/leaflet.css" />
 
+
 </head>
 <style>
     #map {
@@ -410,18 +411,7 @@
 
 
             const text = message.data;
-            let sentence = text.toLowerCase();
-            console.log(message.data);
-
-            document.getElementById('hiddenButton').click();
-
-            // Perform speech synthesis when the button is clicked
-            document.getElementById('hiddenButton').addEventListener('click', () => {
-                speechSynthesis.speak(new SpeechSynthesisUtterance('Hello, world!'));
-            });
-
-
-
+            console.log(text);
 
             if (text === "RED -> Autonomous Mode") {
                 light.style.backgroundColor = "red";
