added starting point |tested

--- a/index.html
+++ b/index.html
@@ -139,43 +139,43 @@
         <div class="point-table">
             <table class="point" style="margin-top: -840px;">
                 <tr>
-                    <th>Point 0</th>
+                    <th>Location 1</th>
                     <td>
                         <div id="one">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 1</th>
+                    <th>Location 2</th>
                     <td>
                         <div id="two">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 2</th>
+                    <th>Location 3</th>
                     <td>
                         <div id="three">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 3</th>
+                    <th>Location 4</th>
                     <td>
                         <div id="four">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 4</th>
+                    <th>Location 5</th>
                     <td>
                         <div id="five">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 5</th>
+                    <th>Location 6</th>
                     <td>
                         <div id="six">N/A</div>
                     </td>
                 </tr>
                 <tr>
-                    <th>Point 6</th>
+                    <th>Location 7</th>
                     <td>
                         <div id="seven">N/A</div>
                     </td>
@@ -425,7 +425,7 @@
                 light.style.backgroundColor = "#00d1ff";
                 stopBlinkingGreen();
             }
-            else if (text === "Point Reached: 0") {
+            else if (text === "Point Reached: 1") {
                 Div1.innerHTML = "Reached";
                 Div1.style.color = "#00ff59"; // make the text bold
 
@@ -439,7 +439,7 @@
                 }
 
             }
-            else if (text === "Point Reached: 1") {
+            else if (text === "Point Reached: 2") {
                 Div2.innerHTML = "Reached";
                 Div2.style.color = "#00ff59";
 
@@ -454,7 +454,7 @@
                     console.log(isBlinking);
                 }
             }
-            else if (text === "Point Reached: 2") {
+            else if (text === "Point Reached: 3") {
                 Div3.innerHTML = "Reached";
                 Div3.style.color = "#00ff59";
                 // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
@@ -470,7 +470,7 @@
                     console.log(isBlinking);
                 }
             }
-            else if (text === "Point Reached: 3") {
+            else if (text === "Point Reached: 4") {
                 Div4.innerHTML = "Reached";
                 Div4.style.color = "#00ff59";
                 // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
@@ -486,7 +486,7 @@
                     console.log(isBlinking);
                 }
             }
-            else if (text === "Point Reached: 4") {
+            else if (text === "Point Reached: 5") {
                 Div5.innerHTML = "Reached";
                 Div5.style.color = "#00ff59";
                 // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
@@ -502,7 +502,7 @@
                     console.log(isBlinking);
                 }
             }
-            else if (text === "Point Reached: 5") {
+            else if (text === "Point Reached: 6") {
                 Div6.innerHTML = "Reached";
                 Div6.style.color = "#00ff59";
                 // save post coordinate (required for autonomous course restart) by reading current /nav_sat datasave post coordinate by reading current /nav_sat data
@@ -518,7 +518,7 @@
                     console.log(isBlinking);
                 }
             }
-            else if (text === "Point Reached: 6") {
+            else if (text === "Point Reached: 7") {
                 Div7.innerHTML = "Reached";
                 Div7.style.color = "#00ff59";
                 // save post coordinate (required for autonomous course restart) by reading current /nav_sat data
